# guest_reseach_agent

./: .gitignore  .replit  README.md  airtable_services.py  assembly_transcriber.py  check_db.py  create_db.py  google_service.py  main.py  pyproject.toml  requirements.txt  research_state.py  rss_scraper.py  server.py  transcriber.py
instance/: podcast_research.db
old_files/: app.py  old_main.py  run.py
static/css/: styles.css
static/js/: app.js  dashboard.js
templates/: 404.html  500.html  dashboard.html  index.html  landing.html  login.html  profile.html  register.html  research_detail.html
